Fixed spacing a bit

--- a/src/components/Projects.module.css
+++ b/src/components/Projects.module.css
@@ -236,7 +236,7 @@
 
   .day-outro {
     width: auto;
-    text-align: center;
+    text-align: justify;
     padding: 2rem 1rem 4rem 1rem;
   }
 
